k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  labels:
    app: nextjs-app
spec:
  type: ClusterIP
  selector:
    app: nextjs-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 3000
